--- a/css.html
+++ b/css.html
@@ -37,9 +37,9 @@
 <div id="container">
   <div id="box1"></div>
   <div id="box2">
-    <div id="box2-child"</div>
-</div>
-  <p>
+    <div id="box2-child"</div></div>
+  <div>
+    <p>
     What do they got in there? King Kong? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. Do you have any idea how long it takes those cups to decompose. Forget the fat lady! You're obsessed with the fat lady! Drive us out of here!
 
     Jaguar shark! So tell me - does it really exist? Must go faster. Did he just throw my cat out of the window? Must go faster. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Life finds a way. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows.
@@ -53,3 +53,5 @@
 </div>
 </body>
 </html>
+
+
