--- a/sandbox-2.html
+++ b/sandbox-2.html
@@ -3,11 +3,47 @@
 <head>
     <title>Floats Example</title>
     <link rel="stylesheet" href="css/sandbox-2.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            background: blue;
+            font-family: Arial;
+        }
+        @media screen and (min-width: 768px){
+            body {
+                background: green;
+            }
+        }
+        @media screen and (min-width: 1024px){
+            body {
+                background: red;
+            }
+        }
+        @media screen and (min-width: 1200px){
+            body {
+                background: purple;
+            }
+        }
+    </style>
 </head>
 <body>
+<main id="wrapper">
 <div id="container">
-    <div id="box1"></div>
-    <div id="box2"></div>
+    <div id="header"></div>
+    <div id="body box1">
+        <p>I gave it a cold? I gave it a virus. A computer virus. God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
+
+            So you two dig up, dig up dinosaurs? Forget the fat lady! You're obsessed with the fat lady! Drive us out of here! God creates dinosaurs. God destroys dinosaurs. God creates Man. Man destroys God. Man creates Dinosaurs. You really think you can fly that thing?
+
+            Yes, Yes, without the oops! Do you have any idea how long it takes those cups to decompose. This thing comes fully loaded. AM/FM radio, reclining bucket seats, and... power windows. Hey, you know how I'm, like, always trying to save the planet? Here's my chance.</p>
+    </div>
+    <div id="body box2">
+        <p>
+            My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard! We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!
+
+            I gave it a cold? I gave it a virus. A computer virus. Hey, take a look at the earthlings. Goodbye! Yeah, but John, if The Pirates of the Caribbean breaks down, the pirates don’t eat the tourists. I was part of something special. I gave it a cold? I gave it a virus. A computer virus.
+        </p>
+    </div>
     <p>
         What do they got in there? King Kong? Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should. Do you have any idea how long it takes those cups to decompose. Forget the fat lady! You're obsessed with the fat lady! Drive us out of here!
 
@@ -20,5 +56,6 @@
         So you two dig up, dig up dinosaurs? Jaguar shark! So tell me - does it really exist? You really think you can fly that thing? They're using our own satellites against us. And the clock is ticking. Forget the fat lady! You're obsessed with the fat lady! Drive us out of here!
     </p>
 </div>
+</main>
 </body>
 </html>
