--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -34,159 +34,159 @@
 
   <h1 class="display-3 my-5 text-center">Bootstrap Grid System</h1>
 
-  <!-- ******************************** EXTRA EXTRA LARGE BREAK POINT ******************************** -->
-  <!--    <h3 class="">Extra Extra Large Break Point: &ge; 1400px</h3>-->
-  <!--    <div class="row">-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--        <div class="col-xxl-1">col-xxl-1</div>-->
-  <!--    </div>-->
+   ******************************** EXTRA EXTRA LARGE BREAK POINT ********************************
+      <h3 class="">Extra Extra Large Break Point: &ge; 1400px</h3>
+      <div class="row">
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+          <div class="col-xxl-1">col-xxl-1</div>
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** EXTRA LARGE BREAK POINT ******************************** &ndash;&gt;-->
-  <!--    <h3 class="">Extra Large Break Point: &ge; 1200px</h3>-->
-  <!--    <div class="row">-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--        <div class="col-xl-1">col-xl-1</div>-->
-  <!--    </div>-->
+      <!-- ******************************** EXTRA LARGE BREAK POINT ******************************** -->
+      <h3 class="">Extra Large Break Point: &ge; 1200px</h3>
+      <div class="row">
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+          <div class="col-xl-1">col-xl-1</div>
+      </div>
 
-  <!--    <br>-->
+      <br>
 
 
-  <!--    &lt;!&ndash; ******************************** LARGE BREAK POINT ******************************** &ndash;&gt;-->
-  <!--    <h3 class="">Large Break Point: &ge; 992px</h3>-->
-  <!--    <div class="row">-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--        <div class="col-lg-1">col-lg-1</div>-->
-  <!--    </div>-->
+      <!-- ******************************** LARGE BREAK POINT ******************************** -->
+      <h3 class="">Large Break Point: &ge; 992px</h3>
+      <div class="row">
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+          <div class="col-lg-1">col-lg-1</div>
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** MEDIUM BREAK POINT ******************************** &ndash;&gt;-->
-  <!--    <h3>Medium Break Point: &ge; 768px</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** MEDIUM BREAK POINT ******************************** -->
+      <h3>Medium Break Point: &ge; 768px</h3>
+      <div class="row">
 
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
-  <!--        <div class="col-md-1">col-md-1</div>-->
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
+          <div class="col-md-1">col-md-1</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** SMALL BREAK POINT ******************************** &ndash;&gt;-->
-  <!--    <h3>Small Break Point: &ge; 576px</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** SMALL BREAK POINT ******************************** -->
+      <h3>Small Break Point: &ge; 576px</h3>
+      <div class="row">
 
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
-  <!--        <div class="col-sm-1">col-sm-1</div>-->
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
+          <div class="col-sm-1">col-sm-1</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** EXTRA SMALL BREAK POINT ******************************** &ndash;&gt;-->
-  <!--    <h3>Extra Small: &lt; 576px</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** EXTRA SMALL BREAK POINT ******************************** -->
+      <h3>Extra Small: &lt; 576px</h3>
+      <div class="row">
 
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
-  <!--        <div class="col-1">col-1</div>-->
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
+          <div class="col-1">col-1</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
-  <!--    <hr>-->
+      <br>
+      <hr>
 
-  <!--    &lt;!&ndash; ******************************** FEWER COLUMNS ******************************** &ndash;&gt;-->
-  <!--    <h3>Fewer Columns Large</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** FEWER COLUMNS ******************************** -->
+      <h3>Fewer Columns Large</h3>
+      <div class="row">
 
-  <!--        <div class="col-md-6 col-lg-4">col-lg-4</div>-->
-  <!--        <div class="col-md-6 col-lg-4">col-lg-4</div>-->
-  <!--        <div class="col-md-6 col-lg-4">col-lg-4</div>-->
+          <div class="col-md-6 col-lg-4">col-lg-4</div>
+          <div class="col-md-6 col-lg-4">col-lg-4</div>
+          <div class="col-md-6 col-lg-4">col-lg-4</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** MIXING DIFFERENT COLUMN SIZES ******************************** &ndash;&gt;-->
-  <!--    <h3>Different Size Divs with Columns</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** MIXING DIFFERENT COLUMN SIZES ******************************** -->
+      <h3>Different Size Divs with Columns</h3>
+      <div class="row">
 
-  <!--&lt;!&ndash;        <div class="col-md-2">col-md-2</div>&ndash;&gt;-->
-  <!--        <div class="col-md-8 offset-md-2">col-md-8</div>-->
-  <!--        <div class="col-md-1 offset-md-1">col-md-1</div>-->
+  <!--        <div class="col-md-2">col-md-2</div>-->
+          <div class="col-md-8 offset-md-2">col-md-8</div>
+          <div class="col-md-1 offset-md-1">col-md-1</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** MULTIPLE BREAKPOINTS ******************************** &ndash;&gt;-->
-  <!--    <h3>Various Orderings at Different Breakpoints</h3>-->
-  <!--    &lt;!&ndash; 12 columns across for extra large screens and above &ndash;&gt;-->
-  <!--    &lt;!&ndash; 6 columns across for large screens &ndash;&gt;-->
-  <!--    &lt;!&ndash; 4 columns across for medium screens &ndash;&gt;-->
-  <!--    &lt;!&ndash; 3 column across for small screens &ndash;&gt;-->
-  <!--    &lt;!&ndash; 2 column across for extra small screens &ndash;&gt;-->
+      <!-- ******************************** MULTIPLE BREAKPOINTS ******************************** -->
+      <h3>Various Orderings at Different Breakpoints</h3>
+       12 columns across for extra large screens and above
+       6 columns across for large screens
+       4 columns across for medium screens
+       3 column across for small screens
+       2 column across for extra small screens
 
   <div class="row">
 
@@ -324,50 +324,50 @@
     </div>
   </div>
 
-  <!--    <br>-->
-  <!--    <hr>-->
+      <br>
+      <hr>
 
-  <!--    &lt;!&ndash; ******************************** OFFSET TO CENTER ******************************** &ndash;&gt;-->
-  <!--    <h3>Using Offset to Center</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** OFFSET TO CENTER ******************************** -->
+      <h3>Using Offset to Center</h3>
+      <div class="row">
 
-  <!--        <div class="col-lg-4 offset-lg-4">col-lg-4 offset-lg-4</div>-->
+          <div class="col-lg-4 offset-lg-4">col-lg-4 offset-lg-4</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** MULTIPLE OFFSETS ******************************** &ndash;&gt;-->
-  <!--    <h3>Multiple Offsets</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** MULTIPLE OFFSETS ******************************** -->
+      <h3>Multiple Offsets</h3>
+      <div class="row">
 
-  <!--        <div class="offset-lg-3 col-lg-3">offset-lg-3 col-lg-3</div>-->
-  <!--        <div class="offset-lg-3 col-lg-3">offset-lg-3 col-lg-3</div>-->
+          <div class="offset-lg-3 col-lg-3">offset-lg-3 col-lg-3</div>
+          <div class="offset-lg-3 col-lg-3">offset-lg-3 col-lg-3</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** OFFSET WITH BREAKPOINTS ******************************** &ndash;&gt;-->
-  <!--    <h3>Offset at a Specific Breakpoint</h3>-->
-  <!--    <div class="row">-->
+      <!-- ******************************** OFFSET WITH BREAKPOINTS ******************************** -->
+      <h3>Offset at a Specific Breakpoint</h3>
+      <div class="row">
 
-  <!--        <div class="offset-md-3 col-md-3 offset-lg-0 col-lg-6">-->
-  <!--            offset-md-3-->
-  <!--            <br>-->
-  <!--            col-md-3-->
-  <!--            <br>-->
-  <!--            offset-lg-0-->
-  <!--            <br>-->
-  <!--            col-lg-6-->
-  <!--        </div>-->
-  <!--        <div class="col-md-3 col-lg-6">col-md-3 col-lg-6</div>-->
+          <div class="offset-md-3 col-md-3 offset-lg-0 col-lg-6">
+              offset-md-3
+              <br>
+              col-md-3
+              <br>
+              offset-lg-0
+              <br>
+              col-lg-6
+          </div>
+          <div class="col-md-3 col-lg-6">col-md-3 col-lg-6</div>
 
-  <!--    </div>-->
+      </div>
 
-  <!--    <br>-->
+      <br>
 
-  <!--    &lt;!&ndash; ******************************** NESTED COLUMNS ******************************** &ndash;&gt;-->
+       ******************************** NESTED COLUMNS ********************************
   <h3>Nested Columns</h3>
   <div class="row">
 
@@ -386,3 +386,23 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
+<div class="container">
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+    <div class="row">
+        <div class="col-md-8">.col-md-8</div>
+        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+    </div>
+
+    <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+    <div class="row">
+        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+        <div class="col-6 col-md-4">.col-6 .col-md-4</div>
+    </div>
+
+    <!-- Columns are always 50% wide, on mobile and desktop -->
+    <div class="row">
+        <div class="col-6">.col-6</div>
+        <div class="col-6">.col-6</div>
+    </div>
+</div>
