--- a/github_practice.html
+++ b/github_practice.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>GitHub HTML Exercise</title>
-  <link rel="stylesheet" href="css/github.css">
+  <title>Title</title>
+  <link rel="stylesheet" href="css/github-practice.css"/>
 </head>
 <body>
 <div class="page-wrapper">
   <header class="container header-container">
     <div class="row">
       <div class="column col-shrink">
-        <img width="40" src="img/48x48.svg">
+        <img width="40" src="./images/github-mark-white.png"/>
       </div>
       <div class="column">
         <ul>
@@ -21,18 +21,18 @@
         </ul>
       </div>
     </div>
-  </header>
+  </header> <!-- END HEADER -->
   <main>
     <div class="container page-header">
       <div class="row">
         <div class="column col-shrink">
-          <img class="profile-pic" src="img/30x30.svg"/>
+          <img class="profile-avatar" src="https://placeholder.pics/svg/30" height="30" width="30"/>
         </div>
         <div class="column">
-          <h1>CodeUp</h1>
+          <h1>Codeup</h1>
         </div>
       </div>
-    </div>
+    </div> <!-- END PAGE HEADER -->
     <div class="container page-tabs-menu">
       <div class="row">
         <div class="column">
@@ -49,15 +49,21 @@
     <div class="container page-tabs-content">
       <div class="row">
         <div class="column">
-          <ul>
-            <li><img class="other-pic" src="img/prof1.jpg"/><a href="#">John Doe</a></li>
-            <li><img class="other-pic" src="img/prof2.jpg"/><a href="#">Jane Doe</a></li>
-            <li><img class="other-pic" src="img/prof3.jpg"/><a href="#">Janet Doe</a></li>
-          </ul>
+
         </div>
       </div>
     </div> <!-- END PAGE TABS CONTENT -->
   </main>
+  <footer class="container">
+    <div class="row">
+      <div class="column">
+        Footer Menu Left
+      </div>
+      <div class="column">
+        Footer Menu Right
+      </div>
+    </div>
+  </footer> <!-- END FOOTER -->
 </div> <!-- END PAGE WRAPPER -->
 </body>
 </html>
